--- a/templates/backtest.html
+++ b/templates/backtest.html
@@ -657,7 +657,7 @@
                 <option value="advanced">Advanced Manual</option>
             </select>
         </div>
-        <div class="config-group">
+        <div class="config-group" style="display:none;">
             <label class="config-label">Station</label>
             <select id="station-select" class="config-input">
                 {% for opt in station_selector_options %}
